--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* trang thông tin */
+.frame_all {
+    @apply px-4 py-8 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-4 lg:px-8;
+}
 
+.title {
+    @apply max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12;
+}
+
+.menu_name {
+    @apply max-w-lg mb-6 font-sans text-3xl font-bold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto;
+}
