--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,21 @@
 .menu_name {
     @apply max-w-lg mb-6 font-sans text-3xl font-bold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto;
 }
+
+/* Trang Home Page */
+
+/* .header-area {
+    @apply
+    bg-transparent border-b-1 border-solid border-gray-nav    
+    absolute left-0 right-0 z-3 h-100
+    tr
+    -webkit-transition: all .5s ease 0s;
+    -moz-transition: all .5s ease 0s;
+    -o-transition: all .5s ease 0s;
+    transition: all .5s ease 0s;
+} */
+
+.contact_item{
+    /* @apply flex items-baseline */
+}
+
