--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .title {
-    @apply max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12;
+    @apply max-w-xl mb-10 md:mx-auto lg:max-w-2xl md:mb-12 text-center;
 }
 
 .menu_name {
