xong trang ca nhan

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -1134,8 +1134,8 @@
 }
 
 .fadeInLeft {
-    -webkit-animation-name: fadeInLeft;
-    animation-name: fadeInLeft;
+    -webkit-animation: fadeInLeft 1s;
+    animation: fadeInLeft 1s;
 }
 
 @-webkit-keyframes fadeInLeftBig {
